chore: fix jvm options